--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -6,13 +6,10 @@
                                            "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <%= render 'layouts/shim' %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
+    <%= render 'layouts/header' %>
         <div class="container">
           <%= link_to "sample app", '#', id: "logo" %>
           <nav>
@@ -27,6 +24,7 @@
     </header>
     <div class="container">
       <%= yield %>
+      <%= 'layouts/footer' %>
     </div>
   </body>
 </html>
