footerのrenderが抜けていたので追加

--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     </header>
     <div class="container">
       <%= yield %>
-      <%= 'layouts/footer' %>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
