--- a/sample_app/app/assets/stylesheets/custom.css.scss
+++ b/sample_app/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,8 @@
 
 /* universal */
 
+$lightGray: #999;
+
 html {
   overflow-y: scroll;
 }
@@ -45,7 +47,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #999;
+  color: $lightGray;
 }
 
 p {
@@ -78,7 +80,7 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
-  color: #999;
+  color: $lightGray;
   a {
     color: #555;
     &:hover {
